单独出录制模块

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-SOURCES +=src/main.cpp src/Bytes.cpp src/Utils.cpp
+SOURCES +=src/main.cpp src/Bytes.cpp src/utils.c
 
-OBJS +=src/main.o src/Bytes.o src/Utils.o
+OBJS +=src/main.o src/Bytes.o src/utils.o
 	
