--- a/src/media/Makefile
+++ b/src/media/Makefile
@@ -1,3 +1,3 @@
-SOURCES +=src/media/videorecorder.cp
+SOURCES +=src/media/videorecorder.cp src/media/water_mark.c
 
-OBJS +=src/media/videorecorder.o
+OBJS +=src/media/videorecorder.o src/media/water_mark.o
