--- a/src/encoder/Makefile
+++ b/src/encoder/Makefile
@@ -1,4 +1,4 @@
 SOURCES +=src/encoder/FLVEncoder.cpp src/encoder/SpsDecode.cpp
 	
-OBJS +=src/encoder/FLVEncoder.o src/encoder/SpsDecode.o
+#OBJS +=src/encoder/FLVEncoder.o src/encoder/SpsDecode.o
 	
