--- a/src/flv/Makefile
+++ b/src/flv/Makefile
@@ -1,4 +1,4 @@
 SOURCES +=src/flv/FLVTag.cpp src/flv/FLVScriptTagBody.cpp src/flv/FLVTagHeader.cpp src/flv/FLVVideoTagBody.cpp src/flv/FLVReader.cpp \
 	
-OBJS +=src/flv/FLVTag.o src/flv/FLVScriptTagBody.o  src/flv/FLVTagHeader.o src/flv/FLVVideoTagBody.o src/flv/FLVReader.o \
+#OBJS +=src/flv/FLVTag.o src/flv/FLVScriptTagBody.o  src/flv/FLVTagHeader.o src/flv/FLVVideoTagBody.o src/flv/FLVReader.o \
 	
