--- a/src/io/Makefile
+++ b/src/io/Makefile
@@ -1,4 +1,4 @@
 SOURCES +=src/io/FLVOutPutStream.cpp src/io/RTMPOutPutStream.cpp
 	
-OBJS +=src/io/FLVOutPutStream.o src/io/RTMPOutPutStream.o
+#OBJS +=src/io/FLVOutPutStream.o src/io/RTMPOutPutStream.o
 	
