--- a/src/camera/Makefile
+++ b/src/camera/Makefile
@@ -1,4 +1,4 @@
-SOURCES +=src/camera/V4L2.c.c src/camera/CameraSource.c src/camera/camera.c
+SOURCES +=src/camera/V4L2.c src/camera/CameraSource.c src/camera/camera.c
 	
-OBJS +=src/camera/V4L2.o src/camera/CameraSource.o src/camera/camera.o
+#OBJS +=src/camera/V4L2.o src/camera/CameraSource.o src/camera/camera.o
 	
