--- a/src/live/Makefile
+++ b/src/live/Makefile
@@ -1,3 +1,3 @@
 SOURCES +=src/live/RTMPLiveVideo.cpp src/live/H264MemReader.cpp src/live/H264LiveVideoSource.cpp
 
-OBJS +=src/live/RTMPLiveVideo.o src/live/H264MemReader.o src/live/H264LiveVideoSource.o
+#OBJS +=src/live/RTMPLiveVideo.o src/live/H264MemReader.o src/live/H264LiveVideoSource.o
