--- a/src/Makefile
+++ b/src/Makefile
@@ -1,1 +1,6 @@
-SOURCES +=src/main.cpp src/Bytes.cpp src/utils.c	
+base_src =src/main.cpp src/Bytes.cpp src/utils.c	
+
+SOURCES += $(base_src)
+
+base_module += $(patsubst %cpp,%o,$(filter %cpp ,$(base_src))) 
+base_module +=$(patsubst %c,%o,$(filter %c ,$(base_src)))
