--- a/src/encoder/Makefile
+++ b/src/encoder/Makefile
@@ -1,4 +1,5 @@
-SOURCES +=src/encoder/FLVEncoder.cpp src/encoder/SpsDecode.cpp
+encode_src +=src/encoder/FLVEncoder.cpp src/encoder/SpsDecode.cpp
 	
-#OBJS +=src/encoder/FLVEncoder.o src/encoder/SpsDecode.o
+encode_module += $(patsubst %cpp,%o,$(filter %cpp ,$(encode_src))) 
+encode_module += $(patsubst %c,%o,$(filter %c ,$(encode_src)))
 	
