--- a/src/flv/lang/Makefile
+++ b/src/flv/lang/Makefile
@@ -1,4 +1,7 @@
-SOURCES +=src/flv/lang/Number.cpp src/flv/lang/String.cpp src/flv/lang/Struct.cpp  src/flv/lang/ECMAArray.cpp 
+lang_src +=src/flv/lang/Number.cpp src/flv/lang/String.cpp src/flv/lang/Struct.cpp  src/flv/lang/ECMAArray.cpp 
 	
-#OBJS +=src/flv/lang/Number.o src/flv/lang/String.o src/flv/lang/Struct.o src/flv/lang/ECMAArray.o 
+SOURCES += $(lang_src)
+
+lang_module += $(patsubst %cpp,%o,$(filter %cpp ,$(lang_src))) 
+lang_module += $(patsubst %c,%o,$(filter %c ,$(lang_src)))
 	
