--- a/src/h264/Makefile
+++ b/src/h264/Makefile
@@ -1,3 +1,6 @@
-SOURCES +=src/h264/H264NALU.cpp src/h264/H264Reader.cpp
+h264_src +=src/h264/H264NALU.cpp src/h264/H264Reader.cpp src/h264/NetH264Reader.cpp
 
-#OBJS +=src/h264/H264NALU.o src/h264/H264Reader.o
+SOURCES += $(h264_src)
+
+h264_module += $(patsubst %cpp,%o,$(filter %cpp ,$(h264_src))) 
+h264_module += $(patsubst %c,%o,$(filter %c ,$(h264_src)))
