--- a/src/exe/Makefile
+++ b/src/exe/Makefile
@@ -1,5 +1,6 @@
 vlserver = src/exe/vlserver.o
 vlrtmp = src/exe/vlrtmp.o
 vlsave = src/exe/vlsave.o
+recorder = src/exe/recorder.o
 
-SOURCES +=  src/exe/vlserver.cpp  src/exe/vlrtmp.cpp src/exe/vlsave.cpp
+SOURCES +=  src/exe/vlserver.cpp  src/exe/vlrtmp.cpp src/exe/vlsave.cpp src/exe/recorder.c
