--- a/src/exe/Makefile
+++ b/src/exe/Makefile
@@ -1,6 +1,7 @@
 vlserver = src/exe/vlserver.o
 vlrtmp = src/exe/vlrtmp.o
+vlrtsp = src/exe/vlrtsp.o
 vlsave = src/exe/vlsave.o
 recorder = src/exe/recorder.o
 
-SOURCES +=  src/exe/vlserver.cpp  src/exe/vlrtmp.cpp src/exe/vlsave.cpp src/exe/recorder.c
+SOURCES +=  src/exe/vlserver.cpp  src/exe/vlrtmp.cpp src/exe/vlrtsp.cpp src/exe/vlsave.cpp src/exe/recorder.c
